@@ -3,14 +3,16 @@ package org.example.controller;
 
 import jakarta.validation.Valid;
 import org.example.dto.ProductDto;
+import org.example.mapper.ProductMapper;
 import org.example.model.Product;
 import org.example.service.ProductService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
+
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/products")
@@ -19,66 +21,67 @@ public class ProductController {
 
 
     private final ProductService productService;
+    private final ProductMapper productMapper;
 
-    public ProductController(ProductService productService) {
+    public ProductController(ProductService productService, ProductMapper productMapper) {
         this.productService = productService;
+        this.productMapper = productMapper;
     }
 
+    /**
+     * 🔍 Získání produktu podle ID.
+     */
     @GetMapping("/{id}")
     public ResponseEntity<ProductDto> getProductById(@PathVariable Long id) {
         return productService.findProductById(id)
-                .map(this::convertToDto)
+                .map(productMapper::toDto)
                 .map(ResponseEntity::ok)
                 .orElse(ResponseEntity.notFound().build());
     }
 
+    /**
+     * ➕ Vytvoření nového produktu (pouze ADMIN).
+     */
     @PostMapping
     @PreAuthorize("hasRole('ADMIN')") // Pouze admin může přidávat produkty
     public ResponseEntity<ProductDto> createProduct(@Valid @RequestBody ProductDto productDto) {
-        Product product = convertToEntity(productDto);
-        Product savedProduct = productService.saveProduct(product);
-        return new ResponseEntity<>(convertToDto(savedProduct), HttpStatus.CREATED);
+        Product savedProduct = productService.saveProduct(productMapper.toEntity(productDto));
+        return new ResponseEntity<>(productMapper.toDto(savedProduct), HttpStatus.CREATED);
     }
 
+    /**
+     * ♻️ Aktualizace existujícího produktu (pouze ADMIN).
+     */
     @PutMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')") // Pouze admin může aktualizovat produkty
     public ResponseEntity<ProductDto> updateProduct(@PathVariable Long id, @RequestBody ProductDto productDto) {
         return productService.findProductById(id)
                 .map(existingProduct -> {
-                    Product updatedProduct = convertToEntity(productDto);
-                    updatedProduct.setId(existingProduct.getId());
-                    Product savedProduct = productService.saveProduct(updatedProduct);
-                    return ResponseEntity.ok(convertToDto(savedProduct));
+                    productMapper.updateProductFromDto(productDto, existingProduct);
+                    Product updatedProduct = productService.saveProduct(existingProduct);
+                    return ResponseEntity.ok(productMapper.toDto(updatedProduct));
                 })
-                .orElse(ResponseEntity.notFound().build());
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
-
+    /**
+     * ❌ Smazání produktu podle ID (pouze ADMIN).
+     */
     @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')") // Pouze admin může mazat produkty
     public ResponseEntity<Void> deleteProduct(@PathVariable Long id) {
-        if (productService.deleteProductById(id)) {
-            return ResponseEntity.noContent().build();
-        } else {
-            return ResponseEntity.notFound().build();
-        }
+        return productService.deleteProductById(id)
+                ? ResponseEntity.noContent().build()
+                : ResponseEntity.notFound().build();
     }
-
+    /**
+     * 📋 Získání seznamu všech produktů.
+     */
     @GetMapping
     public List<ProductDto> getAllProducts() {
         return productService.findAllProducts().stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .map(productMapper::toDto)
+                .toList();
     }
 
-    private ProductDto convertToDto(Product product) {
-        return new ProductDto(product.getId(), product.getName(), product.getDescription(), product.getPrice());
-    }
 
-    private Product convertToEntity(ProductDto productDto) {
-        Product product = new Product();
-        product.setName(productDto.getName());
-        product.setPrice(productDto.getPrice());
-        product.setDescription(productDto.getDescription());
-        return product;
-    }
 }
